# barcode

./: .doxygenrc  .gitignore  RBarcode.podspec  README.md
android/: build.gradle  gradle.properties  proguard.txt  settings.gradle
android/barcode/: gradle.properties
android/barcode-code128/: build.gradle  gradle.properties
android/barcode-code128/src/androidTest/: AndroidManifest.xml
android/barcode-code128/src/androidTest/java/jp/co/rakuten/esd/barcode/code128/: Code128BarcodeTestInstrumental.java
android/barcode-code128/src/main/: AndroidManifest.xml
android/barcode-code128/src/main/cpp/: CMakeLists.txt  barcode-code128.cpp
android/barcode-code128/src/main/java/jp/co/rakuten/esd/barcode/code128/: Code128Barcode.java  Code128Shape.java
android/barcode/src/main/: AndroidManifest.xml
android/barcode/src/main/java/jp/co/rakuten/esd/barcode/: Barcode.java
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .doxygenrc  Podfile  README.md
ios/RBarcode/: RBCBarcode.h  RBCBarcode.m  RBCDefines.h  RBarcode.h  RBarcode.modulemap
ios/RBarcode.xcodeproj/: project.pbxproj
ios/RBarcode.xcodeproj/xcshareddata/xcschemes/: Tests.xcscheme
ios/RBarcode/Code128/: RBCCode128Barcode.h  RBCCode128Barcode.m
ios/Tests/: Code128EncodingTests.m  Code128MiscTests.m  Code128RenderingTests.m  CommonTests.m
ios/fastlane/: Fastfile
src/code128/: CMakeLists.txt  bar128encode.c  bar128encode.h
